hphp/hack/test/typecheck/array/disallow_key_value_inputs_for_varray.php.exp
File "disallow_key_value_inputs_for_varray.php", line 4, characters 20-20:
A closing square bracket (']') is expected here. (Parsing[1002])
File "disallow_key_value_inputs_for_varray.php", line 4, characters 20-21:
Unbound name: => (a global constant) (Naming[2049])
