hphp/hack/test/typecheck/array/disallow_key_value_inputs_for_varray.php
<?hh // partial

function test(): void {
  varray["tingley" => 0];
}
